# Teleprompter

./: AGENTS.md  pyproject.toml  server.py  teleprompter.spec
public/: controller.html  index.html  teleprompter.html
public/css/: styles.css
public/js/: controller.js  teleprompter.js
uploads/: 5bb0d5fb2f944c5593e4d6d77aaf904c_H114 - Huricane Kathrina.docx
